tests/ui/derive_enum.stderr
error: Struple may only be derived on structs
 --> $DIR/derive_enum.rs:3:10
  |
3 | #[derive(Struple)]
  |          ^^^^^^^
